[gd_scene load_steps=8 format=3 uid="uid://bt4vddklvsmgm"]

[ext_resource type="PackedScene" uid="uid://jd8o7mwcbif0" path="res://bullet/bullet.tscn" id="1_1xy7o"]
[ext_resource type="Texture2D" uid="uid://b204ep1hunuub" path="res://bullet/enemy/bullet_enemy.png" id="2_bvs3k"]
[ext_resource type="Script" path="res://bullet/enemy/bullet_enemy.gd" id="2_mefsr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_47kud"]
atlas = ExtResource("2_bvs3k")
region = Rect2(0, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_n75ns"]
atlas = ExtResource("2_bvs3k")
region = Rect2(13, 0, 13, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_acpoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47kud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n75ns")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bhroh"]
radius = 1.0

[node name="BulletEnemy" instance=ExtResource("1_1xy7o")]
collision_mask = 5
input_pickable = false
monitorable = false
script = ExtResource("2_mefsr")

[node name="AnimatedSprite" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_acpoq")
autoplay = "default"
frame_progress = 0.19735

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_bhroh")

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
